<resources>
    <string name="copyleft" translatable="false">Copyleft 2020</string>
    <string name="app_name" translatable="false">Paris respire</string>
    <string name="notification">Notification</string>
    <string name="license_text"> This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.</string>
    <string name="git_url"><u>https://framagit.org/alan-camilo/paris-respire-app</u></string>
    <string name="developed_by">Developed by par Alan C. Herrera</string>
    <string name="about">About</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="global_index">Pollution level</string>
    <string name="pm10">the particulate matter</string>
    <string name="o3">the ozone</string>
    <string name="no2">the nitrogen</string>
    <string name="so2">the sulfur dioxide</string>
    <string name="pm10_index">Particulate matter (PM10)</string>
    <string name="o3_index">Ozone</string>
    <string name="no2_index">Nitrogen dioxide</string>
    <string name="refresh">Refresh</string>
    <string name="notification_channel_name">Daily report</string>
    <string name="notification_channel_description">Daily notification of the Paris air quality report</string>
    <string name="activate_notifications">Activate daily notifications</string>
    <string name="activate_alerts">Activate pollution alerts</string>
    <string name="very_good">very good</string>
    <string name="good">good</string>
    <string name="mediocre">mediocre</string>
    <string name="bad">bad</string>
    <string name="very_bad">very bad</string>
    <string name="notification_text">the air quality is %1$s (index %2$d)</string>
    <string name="alert_channel_name">Pollution forecast</string>
    <string name="alert_channel_description">Pollution forecast in Paris</string>
    <string name="alert">alert</string>
    <string name="information">information</string>
    <string name="error_no_data">error no air quality data</string>
    <string name="error_network">network error</string>
    <string name="error_unknown">unknown error</string>
    <string name="error_bad_client_request">error bad client request</string>
    <string name="error_server">server error</string>
    <string name="error_redirect">redirection error</string>
    <string name="error_timeout">error request timeout</string>
    <string name="error_send_count">error max requests number exceeded</string>
    <string name="error_bad_json">error unexpected json</string>
    <string name="error_serialization">error deserialization impossible</string>
    <string name="error_socket_timeout">error network timeout</string>
    <string name="donate">Offer me a beer</string>
    <string name="rate">Rate the app</string>
    <string name="airparif_map_description">Map of the air quality</string>
    <string name="no_connectivity">no internet connectivity</string>
    <string name="pollution_message">%1$s level tomorrow for %2$s</string>
    <string name="very_low">very low</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="very_high">very high</string>
    <string name="no2_wiki">Nitrogen dioxide is a major pollutant of the earth\'s atmosphere produced by internal combustion engines and thermal power stations; as such, it is responsible for the eutrophying and acidifying nature of non-sulphur \"acid rain\".</string>
    <string name="pm10_wiki">Particulate matter is the particles suspended in the Earth\'s atmosphere. A high level of fine and ultrafine particles in the air is a health risk factor (cardiovascular disease, impaired lung function, lung cancer), leading to a marked decrease in life expectancy.</string>
    <string name="o3_wiki">Ground-level ozone is the ozone formed in the lower atmosphere. It is mainly emitted by human activities and flora, under the effect of solar UV. Ozone peaks therefore appear when there is a lot of sunshine, and under anticyclonic conditions, the episode worsening if the anticyclonic persists.</string>
    <string name="idf_global_index">Ile-de-France global index</string>
    <string name="idf_global_wiki">The global index of the Ile-de-France region. This index is based on the worst index of the 3 pollutants below.</string>
    <string name="close">close</string>
    <string name="location_permission_message">The location is necessary for the app features. It will not be saved or shared.</string>
    <string name="share_location">Authorize my location</string>
    <string name="map">Map</string>
    <string name="daily_air_report">Daily air report</string>
    <string name="config_info_subtitle">Configuration &amp; Information</string>
    <string name="content_description_logo_paris_respire" translatable="false">logo Paris respire</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
</resources>
