<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/notification"
        android:icon="@drawable/baseline_notifications_none_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/notification" />
    <item android:id="@+id/refresh"
        android:icon="@drawable/baseline_refresh_white_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/rate"
        android:title="@string/rate"
        app:showAsAction="never"/>
    <item android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="never"/>
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>