<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/license_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_text"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/git_url_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/git_url"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/license_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/developed_by_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/git_url_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/copyleft_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyleft"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/developed_by_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>